--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vercel dev -l 7896",
     "dev": "vite",
-    "build:setup": "cp README.md public/setup-guide/index.md; bun run public/setup-guide/gen_markdown.js",
-    "build": "bun run build:setup; vite build",
+    "build": "vite build",
     "preview": "vite preview",
-    "deploy": "bun run build:setup; vercel --prod",
     "clean": "rm -rf dist"
   },
   "dependencies": {
